Stopped Scroll on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
+/* html, body {
   scroll-behavior: smooth;
-  height: 100%;
+  height:100%;
+} */
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 body {
